--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=DatingApp;Username=postgres;Password=Boya891"
     "DefaultConnection":"Data source=datingapp.db"
   },
   "TokenKey":"suplkuytrstxgchvjbhnmliuiytudryxfchgvjbhkniuiyutfhgvber secret unguessable key"
